# MolSim-WS25-GroupB

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  MolSim  README.md
.github/workflows/: cmake-single-platform.yml
cmake/modules/: doxygen.cmake  gtest.cmake  openmp.cmake  spdlog.cmake  vtk.cmake  yamlcpp.cmake
include/: ForceCalc.h  LinkedCellParticleContainer.h  Particle.h  ParticleContainer.h  ParticleGenerator.h  Simulation.h
include/io/: FileCuboidReader.h  FileReader.h  VTKWriter.h  XYZWriter.h  YAMLFileReader.h
include/outputWriter/: VTKWriter.h
include/utils/: MaxwellBoltzmannDistribution.h
input/: collision1000.yaml  collision2.yaml  collision2000.yaml  collision2_outflow.yaml  collision3.yaml  collision4000.yaml  eingabe-collision-big.txt  eingabe-collision.txt  eingabe-cuboid.txt  falling_drop_wall.yaml
scripts/: clang-format-project.sh  rebuild-benchmark-parallel.sh  rebuild-benchmark.sh  rebuild-yaml.sh  rebuild.sh
src/: CalcMethod.cpp  CalcMethod.h  FileCuboidReader.cpp  FileCuboidReader.h  FileReader.cpp  FileReader.h  ForceCalc.cpp  ForceCalc.h  LinkedCellParticleContainer.cpp  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  Simulation.cpp  Simulation.h  main.cpp
src/io/: FileCuboidReader.cpp  FileReader.cpp  VTKWriter.cpp  XYZWriter.cpp  YAMLFileReader.cpp
src/outputWriter/: VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h
src/utils/: ArrayUtils.h  MaxwellBoltzmannDistribution.h
test/: CalcMethodTest.cpp  CuboidFileReaderTest.cpp  ForceCalcTest.cpp  ParticleContainerTest.cpp  ParticleGeneratorTest.cpp
